--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, vitae accusamus. Facilis, quos? Eligendi, saepe nesciunt maxime quidem quae natus cumque repellat impedit earum reprehenderit!</p>
         </div>
         <div class="sideimg">
-            <img src="T:\Codes\Task5\Assets\pexels-pixabay-34534.jpg" alt="">
+            <img src="pexels-pixabay-34534.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, vitae accusamus. Facilis, quos? Eligendi, saepe nesciunt maxime quidem quae natus cumque repellat impedit earum reprehenderit!</p>
         </div>
         <div class="sideimg">
-            <img src="T:\Codes\Task5\Assets\pexels-pixabay-34534.jpg" alt="">
+            <img src="pexels-pixabay-34534.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, vitae accusamus. Facilis, quos? Eligendi, saepe nesciunt maxime quidem quae natus cumque repellat impedit earum reprehenderit!</p>
         </div>
         <div class="sideimg">
-            <img src="T:\Codes\Task5\Assets\pexels-pixabay-34534.jpg" alt="">
+            <img src="pexels-pixabay-34534.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, vitae accusamus. Facilis, quos? Eligendi, saepe nesciunt maxime quidem quae natus cumque repellat impedit earum reprehenderit!</p>
         </div>
     </div>
